# E_commerce_platform

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
contacts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_release_date_greater_or_equal_now.py  0002_remove_product_release_date_greater_or_equal_now_and_more.py  0003_remove_product_release_date_greater_or_equal_now_and_more.py
retail_network/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
retail_network/migrations/: 0001_initial.py  0002_alter_networknode_contacts.py
tests/: conftest.py
tests/tests_contacts/: test_models.py  test_views.py
tests/tests_products/: test_models.py  test_views.py
tests/tests_retail_network/: test_views.py
tests/tests_users/: test_views.py
users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
